--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <div>Hello!</div>
 <div>Friend!</div>
 <div>Bro!</div>g
-<div>Fourth!</div>
-<div>Fifth!</div>
+<div>Bobek!</div>
+<div>Ciocia!</div>
 <div>Sixth</div>
 <div>Seventh</div>
 <div>Hello!</div>
 <div>Siemka!</div>
 <div>Elo!</div>
 <div>BOBO</div>
+<div>Sąsiad</div>
