--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <div>Friend!</div>
 <div>Bro!</div>g
 <div>Bobek!</div>
-<div>Ciocia!</div>
-<div>Sixth</div>
+<div>Wujek!</div>
+<div>One</div>
 <div>Seventh</div>
 <div>Hello!</div>
 <div>Siemka!</div>
